@@ -5,6 +5,9 @@ Revision history for Perl extension HTML::Revelation.
 	- Replace /usr/bin/perl with /usr/bin/env perl.
 	- Replace common::sense with use strict and use warnings, to get uninit var warnings.
 	  - In scripts/reveal.pl, change hard-coded /home/ron/homepage to use Local::Config's savage_net_au_dir.
+	- Move t/pod.t to xt/author/.
+	- Add github repo.
+	- Add use strict and use warnings to Build.PL and Makefile.PL.
 
 1.03  Sun Feb 21 12:55:19 2010
 	- Remove text 'All rights reserved' (for Debian licensing).
